Fixed spacing issues

--- a/src/Dfe.EarlyYearsQualification.Web/wwwroot/css/site.css
+++ b/src/Dfe.EarlyYearsQualification.Web/wwwroot/css/site.css
@@ -200,11 +200,6 @@ body {
     border-left-color: #d4351c;
 }
 
-.qualification-result-container {
-    margin-bottom: 60px;
-}
-
-
 #ud-feedback {
     background: #fff;
     margin-top: 30px;
